--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "lib/ds-test"]
 	path = lib/ds-test
-	url = https://github.com/maple-labs/ds-test
+	url = https://github.com/dapphub/ds-test
