--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,24 @@
-name: "Build"
+name: Tests
 on:
   pull_request:
   push:
+    branches: [ master ]
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, ]
-        # we need this to map platform names as used by github to
-        # the attribute names defined in release.nix
-        include:
-          - os: ubuntu-latest
-            os_attr: linux
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
+  tests:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
-      - uses: cachix/install-nix-action@ef4324316b96b50b4671cecef9ecc6fd286f224a
+      - uses: actions/setup-node@v2
+      - uses: cachix/install-nix-action@v13
+      - uses: cachix/cachix-action@v10
         with:
-          skip_adding_nixpkgs_channel: false
-      - uses: cachix/cachix-action@6e4751ed42b22f60165d3f266cfa4cce66ae406d
-        with:
-          name: dapp
-          skipPush: true
-          signingKey: ''
+          name: radicle-streaming
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: install
-        run: nix-env -f https://github.com/dapphub/dapptools/archive/master.tar.gz -iA solc-static-versions.solc_0_8_7
+        run: nix-shell --run "make install"
       - name: test
-        run: nix-shell --pure --command "make test"
+        if: ${{ github.event_name == 'pull_request' }}
+        run: nix-shell --run "make test"
+      - name: test deep
+        if: ${{ github.event_name == 'push' }}
+        run: nix-shell --run "make test_deep"
