feat: Update foundry config

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,10 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 solc-version = "0.8.7"
+optimizer = true
+optimizer_runs = 1000000
+verbosity = 1
+fuzz_runs = 5 
 remappings = [
     'ds-test/=lib/ds-test/src/',
     'openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/',
