--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,10 @@ on:
   pull_request:
   push:
     branches: [ master ]
+
+env:
+  FOUNDRY_PROFILE: ci 
+
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -14,9 +18,6 @@ jobs:
       - uses: onbjerg/foundry-toolchain@v1
         with:
           version: nightly
-
-      - name: Setup environment
-        run: export FOUNDRY_PROFILE=ci
 
       - name: install
         run: make install
