ci: Run deep tests on push to master

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,10 @@ jobs:
 
       - name: test
         if: ${{ github.event_name == 'pull_request' }}
+        run: make test
+
+      - name: test deep
+        if: ${{ github.event_name == 'push' }}
         env:
           FOUNDRY_FUZZ_RUNS: 50000
         run: make test
