--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
         with:
           submodules: recursive
       - uses: actions/setup-node@v2
-      - uses: onbjerg/foundry-toolchain@v1
+      - uses: CodeSandwich/foundry-toolchain@b75f3779556ded669762ab699342330bc726b176
         with:
-          version: nightly
+          version: nightly-6547691c6123c1bdbed770fcd245f1e63092befe
 
       - name: install
         run: make install
