--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           submodules: recursive
       - uses: actions/setup-node@v2
-      - uses: CodeSandwich/foundry-toolchain@b75f3779556ded669762ab699342330bc726b176
+      - uses: CodeSandwich/foundry-toolchain@loggy
         with:
           version: nightly-6547691c6123c1bdbed770fcd245f1e63092befe
 
