--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
       - name: install
         run: make install
 
+      - name: lint
+        run: make lint
+
       - name: test
         if: ${{ github.event_name == 'pull_request' }}
         run: make test
