ci: Update workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: make test
 
       - name: test deep
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'pull_request' }}
         env:
           FOUNDRY_FUZZ_RUNS: 50000
         run: make test
