Upgrade prettier and solhint to support new Solidity features (#158)

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "license": "GPL-3.0-only",
     "devDependencies": {
         "prettier": "^2.4.0",
-        "prettier-plugin-solidity": "^1.0.0-beta.18",
-        "solhint": "^3.3.6",
+        "prettier-plugin-solidity": "https://github.com/prettier-solidity/prettier-plugin-solidity.git#fc77fd6eff0c232d84ff50a147592a94b62e03d7",
+        "solhint": "^3.3.7",
         "solhint-plugin-prettier": "^0.0.5"
+    },
+    "resolutions": {
+        "solhint/@solidity-parser/parser": "0.14.2-beta.1"
     },
     "scripts": {
         "lint": "solhint --max-warnings=0 'src/**/*.sol'",
