--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "radicle-drips-hub",
     "license": "GPL-3.0-only",
     "devDependencies": {
-        "prettier": "^2.4.0",
-        "prettier-plugin-solidity": "https://github.com/prettier-solidity/prettier-plugin-solidity.git#fc77fd6eff0c232d84ff50a147592a94b62e03d7",
+        "prettier": "^2.7.1",
+        "prettier-plugin-solidity": "1.0.0-dev.23",
         "solhint": "^3.3.7",
         "solhint-plugin-prettier": "^0.0.5"
     },
