--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,24 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - uses: cachix/install-nix-action@v13
-      - uses: cachix/cachix-action@v10
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
         with:
-          name: radicle-drips-hub
-          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - name: install
-        run: nix-shell --run "make install"
+          version: nightly
+      - name: install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+          cache: "yarn"
+      - name: make install
+        run: make install
       - name: lint
-        run: nix-shell --run "make lint"
+        run: make lint
       - name: test
         if: ${{ github.event_name == 'pull_request' }}
-        run: nix-shell --run "make test"
+        run: make test
       - name: test deep
         if: ${{ github.event_name == 'push' }}
-        run: nix-shell --run "make test_deep"
+        run: make test_deep
