Switch to forge fmt (#199)

--- a/foundry.toml
+++ b/foundry.toml
@@ -7,3 +7,5 @@ remappings = [
     'forge-std/=lib/forge-std/src/',
     'openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/'
 ]
+[fmt]
+line_length = 100
