Reduce optimizer runs

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,6 @@
 [profile.default]
 solc_version = '0.8.17'
-optimizer_runs = 1_000_000
+optimizer_runs = 35_000
 verbosity = 1
 fuzz_runs = 5
 remappings = [
