--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,48 @@
 node_modules
 /out
 /cache
+
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+coverage.json
+typechain
+
+# production
+build
+
+# misc
+.idea
+.DS_Store
+.env*
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+#Hardhat files
+cache
+artifacts
+
+# OpenZeppelin
+.openzeppelin/unknown-*.json
+.openzeppelin/.session
+
+# Certora
+.certora*
+resource_errors.json
+last_conf*
+
+certora*.txt
+.zip-output-url.txt
+
+*.png
+*.gv
+*.conf
