--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,7 @@ jobs:
         run: echo FOUNDRY_FUZZ_RUNS=50000 >> $GITHUB_ENV
       - name: run tests
         run: forge test --deny-warnings
+      - name: run Slither
+        uses: crytic/slither-action@v0.2.0
+        with:
+          slither-version: '0.9.2'
