--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,8 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         run: echo FOUNDRY_FUZZ_RUNS=50000 >> $GITHUB_ENV
       - name: run tests
-        run: forge test --deny-warnings --build-info
+        run: forge test --deny-warnings
       - name: run Slither
-        uses: crytic/slither-action@v0.2.0
+        uses: crytic/slither-action@dev-git-safe-workspace
         with:
           slither-version: '0.9.2'
-          # A workaround for https://github.com/crytic/slither-action/issues/49,
-          # requires passing `--build-info` to `forge test`
-          ignore-compile: true
