--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Tests
 on:
   pull_request:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   tests:
     runs-on: ubuntu-latest
