Upgrade Slither to 0.9.3 (#302)

--- a/slither.config.json
+++ b/slither.config.json
@@ -1,4 +1,4 @@
 {
     "filter_paths": "(lib/|test/)",
-    "detectors_to_exclude": "solc-version,variable-scope"
+    "detectors_to_exclude": "solc-version"
 }
