--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           version: nightly
       - name: check formatting
         run: forge fmt --check
-      - name: make fuzz tests on master branch extensive
+      - name: make fuzz tests on main branch extensive
         if: ${{ github.event_name == 'push' }}
         run: echo FOUNDRY_FUZZ_RUNS=50000 >> $GITHUB_ENV
       - name: run tests
@@ -23,4 +23,4 @@ jobs:
       - name: run Slither
         uses: crytic/slither-action@v0.3.0
         with:
-          slither-version: '0.9.2'
+          slither-version: '0.9.3'
