--- a/foundry.toml
+++ b/foundry.toml
@@ -1,9 +1,13 @@
 [profile.default]
 solc_version = '0.8.24'
 evm_version = 'shanghai'
-optimizer_runs = 7_700
+optimizer = false
 verbosity = 1
 fuzz_runs = 5
+[profile.optimized]
+via_ir = true
+optimizer = true
+optimizer_runs = 1_000_000_000
 [fmt]
 line_length = 100
 [fuzz]
